--- a/templates/index.html
+++ b/templates/index.html
@@ -1,119 +1,93 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-        <title>Doug McIntosh</title>
-        <!-- Bootstrap -->
-        <link href="static/styles/bootstrap.min.css" rel="stylesheet" >
-        <link href="static/styles/bootstrap-theme.css" rel="stylesheet" >
-        <link rel="stylesheet" href="static/styles/swiper.min.css" >
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <title>{% block title %}Doug McIntosh{% endblock %}</title>
+    <!-- Bootstrap -->
+    <link href="/static/styles/bootstrap.min.css" rel="stylesheet">
+    <link href="/static/styles/bootstrap-theme.css" rel="stylesheet">
+    <link rel="stylesheet" href="static/styles/swiper.min.css">
 
-        <link href="static/styles/style.css" rel="stylesheet" type="text/css">
+    <link href="static/styles/style.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
-        <header class="hero">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-6 col-md-offset-6 col-xs-12">
-                        <nav>
-                            <div id="menu-toggle">
-                                <div class="hamburger">
-                                    <span class="line"></span>
-                                    <span class="line"></span>
-                                    <span class="line"></span>
-                                </div>
-                                <div class="cross">
-                                    <span class="line"></span>
-                                    <span class="line"></span>
-                                </div>
+    <header class="hero">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6 col-md-offset-6 col-xs-2">
+                    <nav>
+                        <div id="menu-toggle">
+                            <div class="hamburger">
+                                <span class="line"></span>
+                                <span class="line"></span>
+                                <span class="line"></span>
                             </div>
-                            <ul class="main-nav">
-                                <li><a href="#">Portfolio</a></li>
-                                <li><a href="#">About</a></li>
-                                <li><a href="http://www.linkedin.com/in/doug-mcintosh">Contact</a></li>
-                            </ul>
-                        </nav>
-                        <!-- <a href="#" class="menu"><img src="assets/menu.png"></a> -->
-                        <div class="hero-text">
-                            <h1><br>Doug McIntosh.</h1>
-                            <h3>Developer in Seattle</h3>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </header>
-
-        <section class="case-study">
-            <div class="container">
-                <div class="row" >
-                    <div class="col-md-12">
-                        <h1 class="heading"><span class="purple">My</span><br>Projects</h1><br />
-                        <!-- Swiper -->
-                        <div class="swiper-container client-swiper">
-                            <div class="swiper-wrapper">
-                                <div class="swiper-slide client-box">
-                                    <img src="static/assets/python.png" class="client-logo">
-                                    <h3 class="text-left title">Python</h3>
-                                    <p class="text-left"><a href="#">certifications???&#8594;</a></p>
-                                </div>
-                                <div class="swiper-slide client-box">
-                                    <img src="static/assets/python.png" class="client-logo">
-                                    <p class="text-left"><a href="#">Know More &#8594;</a></p>
-                                </div>
-                                <div class="swiper-slide client-box">
-                                    <img src="static/assets/python.png" class="client-logo">
-                                    <p class="text-left"><a href="#">Know More &#8594;</a></p>
-                                </div>
-                                <div class="swiper-slide client-box">
-                                    <img src="static/assets/python.png" class="client-logo">
-                                    <p class="text-left"><a href="#">Know More &#8594;</a></p>
-                                </div>
-                                <div class="swiper-slide client-box">
-                                    <img src="static/assets/python.png" class="client-logo">
-                                    <p class="text-left"><a href="#">Know More &#8594;</a></p>
-                                </div>
-                                <div class="swiper-slide client-box">
-                                    <img src="static/assets/python.png" class="client-logo">
-                                    <p class="text-left"><a href="#">Know More &#8594;</a></p>
-                                </div>
-                                <div class="swiper-slide client-box">
-                                    <img src="static/assets/python.png" class="client-logo">
-                                    <p class="text-left"><a href="#">What Else?? &#8594;</a></p>
-                                </div>
+                            <div class="cross">
+                                <span class="line"></span>
+                                <span class="line"></span>
                             </div>
-
                         </div>
-                        <!-- Add Arrows -->
-                        <div class="swiper-button-next"></div>
-                        <div class="swiper-button-prev"></div>
+                        <ul class="main-nav">
+                            <li><a href="{{url_for('index')}}">Home</a></li>
+                            <li><a href="{{url_for('aboutme')}}">About</a></li>
+                            <li><a href="{{url_for('aboutthis')}}">About This Site</a></li>
+                            <li><a href="http://www.linkedin.com/in/doug-mcintosh">Contact</a></li>
+                        </ul>
+                    </nav>
+                    <div>
+                        <h3 class="col-md-6 col-md-pull-4 col-xs-8">Doug McIntosh  Seattle, WA</h3>
                     </div>
                 </div>
             </div>
-        </section>
+        </div>
+    </header>
+    {% block content %}
+    <section class="case-study">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <h1 class="heading"><span class="purple">My</span><br>Projects</h1><br />
+                    <!-- Swiper -->
+                    <div class="swiper-container client-swiper">
+                        <div class="swiper-wrapper">
+                            <div class="swiper-slide client-box">
+                                <h3 class="text-left title"><a href="{{url_for('musicians_albums')}}">Musicians and Albums</a></h3>
+                            </div>
+                        </div>
 
-        
-
-        <!-- Footer -->
-        <footer>
-            <div class="container-fluid">
-                <div class="row sub-footer">
-                    <div class="col-md-12 text-center">
-                        <p>This site is based on a template designed by <a href="#" target="_blank">@realvjy</a> | Download <a href="http://designerdada.com/free-bootstrap-one-page-portfolio-template/">here</a></p>
                     </div>
+                    <!-- Add Arrows -->
+                    <div class="swiper-button-next"></div>
+                    <div class="swiper-button-prev"></div>
                 </div>
             </div>
-        </footer>
+        </div>
+    </section>
+    {% endblock %}
 
-        <!-- Some Javascript -->
-        <script src="static/js/jquery-2.1.1.js"></script>
-    <script src="static/js/swiper.jquery.min.js"></script>
+
+
+    <!-- Footer -->
+    <footer>
+        <div class="container-fluid">
+            <div class="row sub-footer">
+                <div class="col-md-12 text-center">
+                    <p>This site is based on a template designed by <a href="#" target="_blank">@realvjy</a> | Download <a href="http://designerdada.com/free-bootstrap-one-page-portfolio-template/">here</a></p>
+                </div>
+            </div>
+        </div>
+    </footer>
+
+    <!-- Some Javascript -->
+    <script src="/static/js/jquery-2.1.1.js"></script>
+    <script src="/static/js/swiper.jquery.min.js"></script>
     <!-- Initialize Client Swiper -->
     <script>
-        var swiper1 = new Swiper('.client-swiper', {
+    var swiper1 = new Swiper('.client-swiper', {
             slidesPerView: 3,
             paginationClickable: true,
             nextButton: '.swiper-button-next',
@@ -164,12 +138,11 @@
                     spaceBetween: 10
                 }
             }
-        });
-    </script>
+        });</script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/waypoints/2.0.3/waypoints.min.js"></script>
-    <script src="static/js/jquery.counterup.min.js"></script>
+    <script src="/static/js/jquery.counterup.min.js"></script>
     <script>
-        // Counterup
+    // Counterup
         $('.counter').counterUp({
             time: 1000
         });
@@ -178,8 +151,7 @@
         $('#menu-toggle').click(function () {
             $(this).toggleClass('open'),
                 $('.main-nav').toggleClass('show-it');
-        })
-    </script>
+        })</script>
 
     <!-- Google Analytics - You should remove this -->
     <script>
@@ -191,8 +163,6 @@
         })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
 
     ga('create', 'UA-29231762-2', 'auto');
-    ga('send', 'pageview');
-
-    </script>
+    ga('send', 'pageview');</script>
 </body>
 </html>
