--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -12,9 +12,6 @@
 }
 a {
   color: #7447ae;
-  -webkit-transition: all 0.2s;
-  -moz-transition: all 0.2s;
-  transition: all 0.2s;
 }
 section {
   width: 100%;
@@ -113,8 +110,8 @@ ul.social-links li a img {
 
 /* Case study */
 .case-study .col-md-12 {
-  transform: translateY(-80px);
-  -webkit-transform: translateY(-80px);
+  /*transform: translateY(-80px);
+  -webkit-transform: translateY(-80px);*/
   padding: 5em 3em;
   background-color: #fff;
   box-shadow: 0 0 100px rgba(0, 0, 0, 0.15);
@@ -160,10 +157,12 @@ h1.heading.pink:after {
     width: 100%;
     height: 100%;
     padding: 4em 1em;
+    display: inline-block;
     background: #37324b;
 }
 .swiper-slide {
   font-size: 18px;
+  display: inline-block;
   background: #fff;
 }
 
@@ -174,31 +173,27 @@ h1.heading.pink:after {
   border-radius: 5px;
   border: 1px solid #eee;
   text-align: center;
-  -webkit-transition: all 0.2s;
-  -moz-transition: all 0.2s;
-  transition: all 0.2s;
 }
 .client-box .client-logo {
   max-height: 120px;
 }
 .client-box h3.title {
-  color: #4e4c58;
+  color: #37324b;
   margin-bottom: 2em;
 }
 .client-box p.tag {
-  color: #7447ae;
+  color: #37324b;
   font-family: 'Montserrat', sans-serif;
   margin-bottom: 1em;
 }
 .client-box a {
-  color: #333;
+  color: #37324b;
   font-style: italic;
-  opacity: 0.5;
 }
 .client-box.swiper-slide-next {
-  -ms-transform: scale(1.15); /* IE 9 */
-  -webkit-transform: scale(1.15); /* Safari */
-  transform: scale(1.15);
+  /*-ms-transform: scale(1.15); /* IE 9 */
+  /*/-webkit-transform: scale(1.15); /* Safari */
+  /*transform: scale(1.15);*/
   box-shadow: 0 0 40px rgba(0, 0, 0, 0.1);
   z-index: 2;
 }
@@ -209,8 +204,8 @@ h1.heading.pink:after {
     box-shadow: 0 0 40px rgba(0, 0, 0, 0.05);
     border-radius: 5em;
     border-color: #a3a1ac;
-    -webkit-transition: all 0.2s;
-    -moz-transition: all 0.2s;
+    /*-webkit-transition: all 0.2s;
+    -moz-transition: all 0.2s;*/
 }
 .swiper-button-next:hover,
 .swiper-button-prev:hover {
@@ -230,9 +225,6 @@ h1.heading.pink:after {
     background-image: url(../assets/arrow-left.png);
     left: -40px;
 }
-
-
-
 /* Testimonial */
 .testimonial-box {
   padding: 2em;
@@ -438,8 +430,9 @@ ul.main-nav {
   padding-right: 20px;
   display: flex;
   justify-content: flex-end;
-  opacity: 0;
-  visibility: hidden;
+  opacity: 1;
+  /*visibility: hidden;*/
+  visibility: visible;
   transition: .25s all;
 }
 ul.main-nav li {
