--- a/templates/index.html
+++ b/templates/index.html
@@ -7,14 +7,14 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>{% block title %}Doug McIntosh{% endblock %}</title>
     <!-- Bootstrap -->
-    <link href="/static/styles/bootstrap.min.css" rel="stylesheet">
-    <link href="/static/styles/bootstrap-theme.css" rel="stylesheet">
+    <link href="static/styles/bootstrap.min.css" rel="stylesheet">
+    <link href="static/styles/bootstrap-theme.css" rel="stylesheet">
     <link rel="stylesheet" href="static/styles/swiper.min.css">
 
     <link href="static/styles/style.css" rel="stylesheet" type="text/css">
 </head>
 
-<body>
+<body style="width:100vw;height:100vh;">
     <header class="hero">
         <div class="container">
             <div class="row">
@@ -42,16 +42,7 @@
                     <div class="swiper-container client-swiper">
                         <div class="swiper-wrapper">
                             <div class="swiper-slide client-box">
-                                <h3 class="text-left"><a href="{{url_for('musicians')}}">Musicians/Albums</a></h3>
-                            </div>
-                            <div class="swiper-slide client-box">
-                                <h3 class="text-left"><a href="{{url_for('musicians')}}">Data Visualization</a></h3>
-                            </div>
-                            <div class="swiper-slide client-box">
-                                <h3 class="text-left"><a href="{{url_for('musicians')}}">Another One</a></h3>
-                            </div>
-                            <div class="swiper-slide client-box">
-                                <h3 class="text-left title"><a href="{{url_for('musicians')}}">a</a></h3>
+                                <h3 class="text-left"><a href="{{url_for('wiki_search')}}">Musicians/Albums</a></h3>
                             </div>
                         </div>
                     </div>
@@ -70,16 +61,16 @@
     <footer>
         <div class="container-fluid">
             <div class="row sub-footer">
-                <div class="col-md-12 text-center">
+                <!--<div class="col-md-12 text-center">
                     <p>This site is based on a template designed by <a href="#" target="_blank">@realvjy</a> | Download <a href="http://designerdada.com/free-bootstrap-one-page-portfolio-template/">here</a></p>
-                </div>
+                </div>-->
             </div>
         </div>
     </footer>
 
     <!-- Some Javascript -->
-    <script src="/static/js/jquery-2.1.1.js"></script>
-    <script src="/static/js/swiper.jquery.min.js"></script>
+    <script src="static/js/jquery-2.1.1.js"></script>
+    <script src="static/js/swiper.jquery.min.js"></script>
     <!-- Initialize Client Swiper -->
     <script>
     var swiper1 = new Swiper('.client-swiper', {
@@ -109,7 +100,7 @@
             }
         });
         // Initialize Testimonial Swiper
-        var swiper2 = new Swiper('.testimonial-swiper', {
+        /*var swiper2 = new Swiper('.testimonial-swiper', {
             slidesPerView: 3,
             pagination: '.swiper-pagination',
             paginationClickable: true,
@@ -133,9 +124,9 @@
                     spaceBetween: 10
                 }
             }
-        });</script>
+        });*/</script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/waypoints/2.0.3/waypoints.min.js"></script>
-    <script src="/static/js/jquery.counterup.min.js"></script>
+    <script src="static/js/jquery.counterup.min.js"></script>
     <script>
     // Counterup
         $('.counter').counterUp({
@@ -148,7 +139,7 @@
                 $('.main-nav').toggleClass('show-it');
         })</script>
 
-    <!-- Google Analytics - You should remove this -->
+    <!-- Google Analytics - You should remove this 
     <script>
         (function (i, s, o, g, r, a, m) {
             i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
@@ -158,6 +149,6 @@
         })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
 
     ga('create', 'UA-29231762-2', 'auto');
-    ga('send', 'pageview');</script>
+    ga('send', 'pageview');</script>-->
 </body>
 </html>
