--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type">
     <meta content="text/html; charset=utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!--<meta name="viewport" content="width=device-width, initial-scale=1">-->
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>{% block title %}Doug McIntosh{% endblock %}</title>
     <!-- Bootstrap -->
@@ -16,7 +16,7 @@
     <link href="static/styles/style.css" rel="stylesheet" type="text/css">
 </head>
 
-<body style="width:100vw;height:100vh;">
+<body>
     <header class="hero">
         <div class="container">
             <div class="row">
@@ -34,6 +34,7 @@
             </div>
         </div>
     </header>
+    <div style="width:100vw;height:2vh;background-color:#37324b"></div>
     {% block content %}
     <section class="case-study">
         <div class="container">
@@ -46,6 +47,15 @@
                             <div class="swiper-slide client-box">
                                 <h3 class="text-left"><a href="{{url_for('wiki_search')}}">Musicians/Albums</a></h3>
                             </div>
+                            <div class="swiper-slide client-box">
+                                <h3 class="text-left"><a href="{{url_for('wiki_search')}}">Data Visualization</a></h3>
+                            </div>
+                            <div class="swiper-slide client-box">
+                                <h3 class="text-left"><a href="{{url_for('wiki_search')}}">Something Else</a></h3>
+                            </div>
+                            <div class="swiper-slide client-box">
+                                <h3 class="text-left"><a href="{{url_for('wiki_search')}}">another thing</a></h3>
+                            </div>
                         </div>
                     </div>
                     <!-- Add Arrows -->
@@ -55,27 +65,17 @@
             </div>
         </div>
     </section>
-    {% endblock %}
+    {% endblock content %}
+    {% block search_results %}{% endblock search_results %}
 
-
-
-    <!-- Footer -->
-    <footer>
-        <div class="container-fluid">
-            <div class="row sub-footer">
-                <!--<div class="col-md-12 text-center">
-                    <p>This site is based on a template designed by <a href="#" target="_blank">@realvjy</a> | Download <a href="http://designerdada.com/free-bootstrap-one-page-portfolio-template/">here</a></p>
-                </div>-->
-            </div>
-        </div>
-    </footer>
+    <div style="width:100vw;height:2vh;background-color:#37324b;position:absolute;bottom:0"></div>
 
     <!-- Some Javascript -->
     <script src="static/js/jquery-2.1.1.js"></script>
     <script src="static/js/swiper.jquery.min.js"></script>
     <!-- Initialize Client Swiper -->
     <script>
-    var swiper1 = new Swiper('.client-swiper', {
+        var swiper1 = new Swiper('.client-swiper', {
             slidesPerView: 3,
             paginationClickable: true,
             nextButton: '.swiper-button-next',
@@ -101,36 +101,11 @@
                 }
             }
         });
-        // Initialize Testimonial Swiper
-        /*var swiper2 = new Swiper('.testimonial-swiper', {
-            slidesPerView: 3,
-            pagination: '.swiper-pagination',
-            paginationClickable: true,
-            spaceBetween: 30,
-            grabCursor: true,
-            freeMode: true,
-            breakpoints: {
-                // when window width is <= 320px
-                320: {
-                    slidesPerView: 1,
-                    spaceBetween: 10,
-                },
-                // when window width is <= 480px
-                480: {
-                    slidesPerView: 1,
-                    spaceBetween: 10
-                },
-                // when window width is <= 640px
-                640: {
-                    slidesPerView: 1,
-                    spaceBetween: 10
-                }
-            }
-        });*/</script>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/waypoints/2.0.3/waypoints.min.js"></script>
-    <script src="static/js/jquery.counterup.min.js"></script>
+    </script>
+    <!--<script src="http://cdnjs.cloudflare.com/ajax/libs/waypoints/2.0.3/waypoints.min.js"></script>
+    <script src="static/js/jquery.counterup.min.js"></script>-->
     <script>
-    // Counterup
+        // Counterup
         $('.counter').counterUp({
             time: 1000
         });
@@ -140,17 +115,5 @@
             $(this).toggleClass('open'),
                 $('.main-nav').toggleClass('show-it');
         })</script>
-
-    <!-- Google Analytics - You should remove this 
-    <script>
-        (function (i, s, o, g, r, a, m) {
-            i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
-                (i[r].q = i[r].q || []).push(arguments)
-            }, i[r].l = 1 * new Date(); a = s.createElement(o),
-                m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
-        })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
-
-    ga('create', 'UA-29231762-2', 'auto');
-    ga('send', 'pageview');</script>-->
 </body>
 </html>
