--- a/templates/wiki_search_results.html
+++ b/templates/wiki_search_results.html
@@ -1,56 +1,42 @@
 {% extends "wiki_search.html" %}
-
+{% block content %}
+  {{ super() }}
+{% endblock content %}
 {% block search_results %}
-<section role="dialog" id="content"
-         aria-labelledby="dialog1Title">
-  <h2 id="dialog1Title">Wikipedia search results</h2>
-    {% if content %}
-    <h3 style="text-align:center">{{content.search_string}}</h3>
+<section>
+    {% if search_content %}
+    <h5 style="text-align:center">Wikipedia search: {{search_content.search_string}}</h5>
     <form id="insert" action="{{ url_for('wiki_insert') }}" method="post">
-        <div style="word-break:break-all;margin-top:2vh;margin-bottom:2vh;justify-content:center;align-items:center;display:flex">
-            <table style="overflow-y:scroll;width:85vw;height:50vh">
-                <colgroup>
-                    <col span="1" style="width: 10%;">
-                    <col span="1" style="width: 35%;">
-                    <col span="1" style="width: 55%;">
-                </colgroup>
-                <thead>
-                    <tr>
-                        <td>Insert to DB?</td>
-                        <td>Title</td>
-                        <td>Wiki Page</td>
-                    </tr>
-                </thead>
-                {% for page in content['pages'] %}
-                <tr>
-                    <td><input type="checkbox" id="{{page.id}}" name="{{page.id}}" value="{{page}}"></td>
-                    <td>{{page.title}}</td>
-                    <td>
-                        <div>
-                            <a href="https://en.wikipedia.org/?curid={{page.id}}" target="_blank"><img src="{{page.thumbnail['url']}}" width="{{page.thumbnail['width']}}" height="{{page.thumbnail['height']}}" /></a>
-                            <p>{{page.description}}</p>
-                        </div>
-                    </td>
-                </tr>
-                {% endfor %}
-            </table>
+        <div id="table-wrapper" >
+            <div id="table-scroll">
+                <table>
+                    <tbody>
+                        {% for page in search_content['pages'] %}
+                        <tr>
+                            <td><input type="checkbox" style="background-color: #37324b;align-content:center" id="{{page.id}}" name="{{page.id}}" title="{{page.id}}" value="{{page}}"></td>
+                            <td>{{page.title}}</td>
+                            <td>
+                                <div style="display:flex;">
+                                    {% if page.thumbnail.url %}
+                                    <a href="https://en.wikipedia.org/?curid={{page.id}}" target="_blank"><img style="height:auto;" src="{{page.thumbnail['url']}}" width="{{page.thumbnail['width']}}" height="{{page.thumbnail['height']}}" /></a>
+                                    {% else %}
+                                    <a href="https://en.wikipedia.org/?curid={{page.id}}" target="_blank">Wiki Page Link</a>
+                                    {% endif %}
+                                    <p>&nbsp{{page.description}}</p>
+                                </div>
+                            </td>
+                        </tr>
+                        {% endfor %}
+                    </tbody>
+                </table>
+            </div>
         </div>
-        <div style="margin-top:2vh;margin-bottom:2vh;justify-content:center;align-items:center;display:flex">
-            <label for="insert">Insert to DB?   </label>
-            <input id="insert" type="submit">
-            <!--create hidden elements for form submission-->
+        
+        <div style="margin-bottom:10px;margin-top:10px;display:flex;justify-content:center">
+            <label for="insert">Insert to DB?&nbsp</label>
+            <input type="submit" />
         </div>
     </form>
-    {% else %}
-    {% if errors %}
-    <div style="overflow-x:scroll;overflow-y:scroll">
-        <p>Dang....got some errors.  please, pretty please, let Doug know about this.</p>
-        <p> a screenshot would be very helpful.</p>
-        {% for k,v in errors.items() %}
-        <p>Key: {{k}}  Value:  {{v}}</p>
-        {% endfor %}
-    </div>
-    {% endif %}
     {% endif %}
 </section>
-{% endblock %}
+{% endblock search_results %}
