--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -21,7 +21,7 @@ input[type='checkbox'] {
 }
 table {
     width: 85vw;
-    height: 50vh;
+    height: 75vh;
     border: 1px solid black;
     overflow-y: scroll;
     margin-left: 5vw;
@@ -74,33 +74,33 @@ th, td {
     cursor: default;
 }
 
-    .help-tip:before {
-        content: '?';
-        font-weight: bold;
-        color: #fff;
-    }
+.help-tip:before {
+    content: '?';
+    font-weight: bold;
+    color: #fff;
+}
 
-    .help-tip:hover p {
-        display: block;
-        transform-origin: 100% 0%;
-        -webkit-animation: fadeIn 0.3s ease-in-out;
-        animation: fadeIn 0.3s ease-in-out;
-    }
+.help-tip:hover p {
+    display: block;
+    transform-origin: 100% 0%;
+    -webkit-animation: fadeIn 0.3s ease-in-out;
+    animation: fadeIn 0.3s ease-in-out;
+}
 
-    .help-tip p { /* The tooltip */
-        display: none;
-        text-align: left;
-        background-color: #1E2021;
-        padding: 20px;
-        width: 300px;
-        position: absolute;
-        border-radius: 3px;
-        box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.2);
-        right: -4px;
-        color: #FFF;
-        font-size: 13px;
-        line-height: 1.4;
-    }
+.help-tip p { /* The tooltip */
+    display: none;
+    text-align: left;
+    background-color: #1E2021;
+    padding: 20px;
+    width: 300px;
+    position: absolute;
+    border-radius: 3px;
+    box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.2);
+    right: -4px;
+    color: #FFF;
+    font-size: 13px;
+    line-height: 1.4;
+}
 
 .help-tip p:before { /* The pointer of the tooltip */
     position: absolute;
@@ -121,9 +121,61 @@ th, td {
     top: -40px;
     left: 0;
 }
+/* my tool tip*/
+.tooltip {
+    position: relative;
+    display: inline-block;
+    border-bottom: 1px dotted black; /* If you want dots under the hoverable text */
+    background-color: #1E2021;
+    border-radius: 50%;
+    width: 24px;
+    height: 24px;
+    font-size: 14px;
+    line-height: 26px;
+    cursor: default;
+}
+
+    /* Tooltip text */
+.tooltip .tooltiptext {
+    visibility: hidden;
+    width: 120px;
+    background-color: black;
+    color: #fff;
+    text-align: center;
+    padding: 5px 0;
+    border-radius: 6px;
+    /* Position the tooltip text- see examples below! */
+    position: absolute;
+    z-index: 1;
+}
+.tooltip .tooltiptext {
+    width: 120px;
+    bottom: 100%;
+    left: 50%;
+    margin-left: -60px; /* Use half of the width (120/2 = 60), to center the tooltip */
+}
+.tooltip:hover .tooltiptext {
+    visibility: visible;
+    display: block;
+    transform-origin: 100% 0%;
+    -webkit-animation: fadeIn 0.3s ease-in-out;
+    animation: fadeIn 0.3s ease-in-out;
+}
+.tooltip:before {
+    content: '?';
+    font-weight: bold;
+    color: #fff;
+}
+.tooltip .tooltiptext:after {
+    width: 100%;
+    height: 40px;
+    content: '';
+    position: absolute;
+    top: -40px;
+    left: 0;
+}
 
 /* CSS animation */
-
 @-webkit-keyframes fadeIn {
     0% {
         opacity: 0;
@@ -192,14 +244,14 @@ body {
     background-color: #f0f0f0;
 }
 a {
-  color: #7447ae;
+  color: blue;
+  text-decoration: underline;
 }
 section {
   width: 100%;
 }
 a:hover, a:focus, a:active {
-  text-decoration: none;
-  outline: none;
+  text-decoration: underline;
 }
 ul {
   margin: 0;
