--- a/templates/wiki_search_results.html
+++ b/templates/wiki_search_results.html
@@ -5,7 +5,7 @@
 {% block search_results %}
 <section>
     {% if search_content %}
-    <h5 style="text-align:center">Wikipedia search: {{search_content.search_string}}</h5>
+    <h5 style="text-align:center">Wikipedia search: {{search_content.search_text}}</h5>
     <form id="insert" action="{{ url_for('wiki_insert') }}" method="post">
         <div id="table-wrapper" >
             <div id="table-scroll">
@@ -20,7 +20,7 @@
                                     {% if page.thumbnail.url %}
                                     <a href="{{page.url}}" target="_blank"><img style="height:auto;" src="{{page.thumbnail['url']}}" width="{{page.thumbnail['width']}}" height="{{page.thumbnail['height']}}" /></a>
                                     {% else %}
-                                    <a href="{{page.url}}" target="_blank">Wiki Page Link</a>
+                                    <a href="{{page.url}}" target="_blank">{{page.title}}</a>
                                     {% endif %}
                                     <p>&nbsp{{page.description}}</p>
                                 </div>
@@ -33,8 +33,7 @@
         </div>
         
         <div style="margin-bottom:10px;margin-top:10px;display:flex;justify-content:center">
-            <label for="insert">Insert to DB?&nbsp</label>
-            <input type="submit" />
+            <input type="submit" value="Insert into DB"/>
         </div>
     </form>
     {% endif %}
