please make github pages work.  delete db button now deletes from both tables before removing the file.  I still need to add more spacing.  Hi everybody!

--- a/templates/wiki_search.html
+++ b/templates/wiki_search.html
@@ -15,7 +15,7 @@
             </select>
         </form>
         <form style="margin-left:25px" id="delete_db" action="{{ url_for('delete_db')}}" method="post">
-            <input type="submit" id="delete" value="Delete Database?"/>
+            <input type="submit" id="delete" value="Delete DB/Start Over?"/>
         </form>
     </div>
 </section>
