--- a/templates/index.html
+++ b/templates/index.html
@@ -45,7 +45,7 @@
                     <div class="swiper-container client-swiper">
                         <div class="swiper-wrapper">
                             <div class="swiper-slide client-box">
-                                <h3 class="text-left"><a href="{{url_for('wiki_search')}}">Musicians/Albums</a></h3>
+                                <h3 class="text-left"><a href="{{url_for('wiki_search')}}">Wikipedia/Youtube Library</a></h3>
                             </div>
                             <div class="swiper-slide client-box">
                                 <h3 class="text-left"><a href="{{url_for('wiki_search')}}">Data Visualization</a></h3>
