--- a/templates/wiki_search_results.html
+++ b/templates/wiki_search_results.html
@@ -13,7 +13,7 @@
                     <tbody>
                         {% for page in search_content['pages'] %}
                         <tr>
-                            <td><input type="checkbox" style="background-color: #37324b;align-content:center" id="{{page.id}}" name="{{page.id}}" title="{{page.id}}" value="{{page}}"></td>
+                            <td><input type="checkbox" style="align-content:center;" id="{{page.id}}" name="{{page.id}}" title="{{page.id}}" value="{{page}}"></td>
                             <td>{{page.title}}</td>
                             <td>
                                 <div style="display:flex;">
