--- a/templates/index.html
+++ b/templates/index.html
@@ -68,7 +68,7 @@
     {% endblock content %}
     {% block search_results %}{% endblock search_results %}
 
-    <div style="width:100vw;height:2vh;background-color:#37324b;position:absolute;bottom:0"></div>
+    <div style="margin-top:5px;width:100vw;height:2vh;background-color:#37324b;position:absolute;bottom:0"></div>
 
     <!-- Some Javascript -->
     <script src="static/js/jquery-2.1.1.js"></script>
