--- a/templates/wiki_search.html
+++ b/templates/wiki_search.html
@@ -46,18 +46,26 @@
                             </td>
                             <td>
                                 {% if page['youtube_videos'] %}
-                                  <div style="height:10vh;overflow-y:scroll">
-                                  {% for each_video in page['youtube_videos'] %}
+                                <div style="height:25vh;overflow-y:scroll">
+                                    {% for each_video in page['youtube_videos'] %}
                                     <div style="display:flex;">
                                         {% if page.thumbnail.url %}
-                                        <a href="{{each_video.url}}" target="_blank"><img style="height:auto;" src="{{each_video.thumbnail['url']}}" width="{{each_video.thumbnail['width']}}" height="{{each_video.thumbnail['height']}}" /></a>
-                                        <p>&nbsp&nbsp{{each_video.title}}</p>
+                                         <a href="{{each_video.url}}" target="#myModal"><img src="{{each_video.thumbnail['url']}}" width="{{each_video.thumbnail['width']}}" height="{{each_video.thumbnail['height']}}" /></a>
                                         {% else %}
-                                        <a href="{{each_video.url}}" target="_blank">{{each_video.title}}</a>
+                                         <a href="{{each_video.url}}" target="_blank">{{each_video.title}}</a>
                                         {% endif %}
+                                        <!--<form action="{{url_for('open_modal')}}" method="post">
+                                            <input id="type" name="type" type="hidden" value="Youtube" />
+                                            <input id="video_id" name="video_id" type="hidden" value="{{each_video.url}}" />
+                                            {% if page.thumbnail.url %}
+                                            <button type="submit" class="image-button"><img src="{{each_video.thumbnail['url']}}" width="{{each_video.thumbnail['width']}}" height="{{each_video.thumbnail['height']}}" /></button>
+                                            {% else %}
+                                            <a href="{{each_video.url}}" target="_blank">{{each_video.title}}</a>
+                                            {% endif %}
+                                        </form>-->
                                     </div>
-                                  {% endfor %}
-                                  </div>
+                                    {% endfor %}
+                                </div>
                                 {% else %}
                                 <div>
                                     <p>No Youtube Videos found</p>
@@ -76,6 +84,9 @@
         </h2>
         <p style="text-align:center">Enter a search term to get back the desired number of result Wikipedia pages. <br /> Select which pages you want to save to the database and We will search and save any youtube entries found(up to 50) based on the title of the Wikipedia page.</p>
         {% endif %}
+    </div>
+    <div id="myModal" tabindex="-1" class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="false">
+        <p>hi doug</p>
     </div>
 </section>
 {% endblock search_results %}
