--- a/templates/wiki_search.html
+++ b/templates/wiki_search.html
@@ -35,12 +35,12 @@
                         {% for page in db_content['pages'] %}
                         <tr style="height:10vh;">
                             <td>
-                                <div style="display:flex;">
+                                <div id="{{page.id}}" style="display:flex;">
                                     {% if page.thumbnail.url %}
-                                    <a href="{{page.url}}" target="_blank"><img style="height:auto;" src="{{page.thumbnail['url']}}" width="{{page.thumbnail['width']}}" height="{{page.thumbnail['height']}}" /></a>
+                                    <a  onclick="add_view_count('{{url_for("add_view_count")}}','{{page.id}}','Wikipedia');" href="{{page.url}}" target="_blank"><img style="height:auto;" src="{{page.thumbnail['url']}}" width="{{page.thumbnail['width']}}" height="{{page.thumbnail['height']}}" /></a>
                                     <p>&nbsp&nbsp{{page.title}}</p>
                                     {% else %}
-                                    <a href="{{page.url}}" target="_blank">{{page.title}}</a>
+                                    <a  onclick="add_view_count('{{url_for("add_view_count")}}','{{page.id}}','Wikipedia');" href="{{page.url}}" target="_blank">{{page.title}}</a>
                                     {% endif %}
                                 </div>
                             </td>
@@ -48,22 +48,14 @@
                                 {% if page['youtube_videos'] %}
                                 <div style="height:25vh;overflow-y:scroll">
                                     {% for each_video in page['youtube_videos'] %}
-                                    <div style="display:flex;">
-                                        {% if page.thumbnail.url %}
-                                         <a href="{{each_video.url}}" target="#myModal"><img src="{{each_video.thumbnail['url']}}" width="{{each_video.thumbnail['width']}}" height="{{each_video.thumbnail['height']}}" /></a>
-                                        {% else %}
-                                         <a href="{{each_video.url}}" target="_blank">{{each_video.title}}</a>
-                                        {% endif %}
-                                        <!--<form action="{{url_for('open_modal')}}" method="post">
-                                            <input id="type" name="type" type="hidden" value="Youtube" />
-                                            <input id="video_id" name="video_id" type="hidden" value="{{each_video.url}}" />
+                                        <div id="{{each_video.id}}" style="display:flex;margin-top:1px">
                                             {% if page.thumbnail.url %}
-                                            <button type="submit" class="image-button"><img src="{{each_video.thumbnail['url']}}" width="{{each_video.thumbnail['width']}}" height="{{each_video.thumbnail['height']}}" /></button>
+                                            <a onclick="add_view_count('{{url_for("add_view_count")}}','{{each_video.id}}','Youtube');" href="{{each_video.url}}" target="_blank"><img src="{{each_video.thumbnail['url']}}" width="{{each_video.thumbnail['width']}}" height="{{each_video.thumbnail['height']}}" /></a>
+                                            <p>{{each_video.title}}</p>
                                             {% else %}
-                                            <a href="{{each_video.url}}" target="_blank">{{each_video.title}}</a>
+                                            <a onclick="add_view_count('{{url_for("add_view_count")}}','{{each_video.id}}','Youtube');" href="{{each_video.url}}" target="_blank">{{each_video.title}}</a>
                                             {% endif %}
-                                        </form>-->
-                                    </div>
+                                        </div>
                                     {% endfor %}
                                 </div>
                                 {% else %}
@@ -85,9 +77,32 @@
         <p style="text-align:center">Enter a search term to get back the desired number of result Wikipedia pages. <br /> Select which pages you want to save to the database and We will search and save any youtube entries found(up to 50) based on the title of the Wikipedia page.</p>
         {% endif %}
     </div>
-    <div id="myModal" tabindex="-1" class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="false">
-        <p>hi doug</p>
-    </div>
+    
+    <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script type="text/javascript" src="static/js/bootstrap.js"></script>
+    <script type="text/javascript">
+        function add_view_count(url,video_id,type) {
+            //alert("calling add_video_count url: " + url + ' video id: ' + video_id + " type: " + type)
+            fetch(url + '?video_id=' + video_id + "&type=" + type, {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json'
+                }
+            })
+                .then(response => response.json())
+                .then(data => {
+                    //alert("data received: " + data.message)
+                })
+                .catch(error => alert('Error after trying db view count insert:', error));
+        }
+        function showModal(type, url,title) {
+           /* alert('Got video request for ' + type + " url: " + url + ' title: ' + title)
+            //document.getElementById('myModal').modal('show');
+            document.getElementById('my_url').innerHTML = '<iframe name="' + type + '" src="' + url + '" title="' + title + '" referrerpolicy="no-referrer"></iframe>';
+            $('#myModal').modal('show');*/
+        };
+    </script>
+    
 </section>
 {% endblock search_results %}
 
